src/parser/snapshots/monkey_language_server__parser__test__if_expr_happy_3_errors.snap
---
source: src/parser/test.rs
description: "if (x < y) { x } else { y }"
expression: "parser_errors(\"if (x < y) { x } else { y }\", errors)"
---
if (x < y) { x } else { y }
