src/parser/snapshots/monkey_language_server__parser__test__if_expr_happy_4_errors.snap
---
source: src/parser/test.rs
description: "if (x < y) { x } else { let z = x + y; z }"
expression: "parser_errors(\"if (x < y) { x } else { let z = x + y; z }\", errors)"
---
if (x < y) { x } else { let z = x + y; z }
