src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_10_errors.snap
---
source: src/parser/test.rs
description: "if (@) { x }"
expression: "parser_errors(\"if (@) { x }\", errors)"
---
if (@) { x }
    ^ SyntaxError: Unexpected '@'.
