src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_8_errors.snap
---
source: src/parser/test.rs
description: "if (x) { x + } "
expression: "parser_errors(\"if (x) { x + } \", errors)"
---
if (x) { x + } 
           ^ SyntaxError: Unexpected '}'.
