src/parser/snapshots/monkey_language_server__parser__test__infix_happy_2_errors.snap
---
source: src/parser/test.rs
description: "\"foo\" == a;\n1 == 1;\n2 != 1;\n4 < 5;\n 5 > 4;"
expression: "parser_errors(\"\\\"foo\\\" == a;\\n1 == 1;\\n2 != 1;\\n4 < 5;\\n 5 > 4;\", errors)"
---
"foo" == a;
1 == 1;
2 != 1;
4 < 5;
 5 > 4;
