src/parser/snapshots/monkey_language_server__parser__test__infix_unhappy_3.snap
---
source: src/parser.rs
description: 1 + /
expression: stmts
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected '/'."), (0,4)->(0,5)),
]
